# numax

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HOST_API.md  LICENSE  README.md  ROADMAP.md  ROADMAP_v0.1.0.md  WHITEPAPER.md  h  n  t
.github/workflows/: benchmark-baseline.yml  ci.yml  docs.yml  release.yml
crates/nx-cli/: Cargo.toml
crates/nx-cli/src/: config.rs  main.rs
crates/nx-cli/tests/: multiprocess_smoke.rs
crates/nx-core/: Cargo.toml
crates/nx-core/benches/: chaos_sync_load.rs  three_node_sync_load.rs
crates/nx-core/reports/baselines/: README.md  chaos-sync-smoke.json  ten-node-sync-smoke.json  three-node-sync-smoke.json
crates/nx-core/reports/load/: chaos-sync-120s.json  chaos-sync-300s.json  chaos-sync-smoke.json  ten-node-sync-300s.json  ten-node-sync-60s.json  ten-node-sync-smoke.json  three-node-sync-300s.json  three-node-sync-30s.json  three-node-sync-debug.json  three-node-sync-smoke.json
crates/nx-core/src/: lib.rs  observability.rs  runtime.rs  sync_config.rs  sync_manager.rs
crates/nx-core/src/host_api/: crdt.rs  crypto.rs  db.rs  log.rs  mod.rs  net.rs  system.rs  time.rs
crates/nx-core/src/sync_manager/: apply.rs  manager.rs  migration.rs  mod.rs  peer.rs  replication.rs  schema.rs  storage.rs  types.rs
crates/nx-core/src/sync_manager/fixtures/v0_1_0/: README.md  records.hex
crates/nx-core/src/sync_manager/fixtures/v0_1_0/generator/: Cargo.toml
crates/nx-core/src/sync_manager/fixtures/v0_1_0/generator/src/: main.rs
crates/nx-core/src/sync_manager/tests/: README.md  mod.rs  support.rs
crates/nx-core/src/sync_manager/tests/e2e/: gcounter.rs  lww_map.rs  lww_register.rs  mod.rs  orset.rs  pncounter.rs  rga.rs
crates/nx-net/: Cargo.toml
crates/nx-net/benches/: serialization.rs
crates/nx-net/src/: error.rs  lib.rs  message.rs  node.rs  peer.rs  tls.rs
crates/nx-net/tests/: allowlist_rejects_peer.rs  node_id_mismatch  node_id_mismatch.rs  tls_mtls_handshake.rs
crates/nx-sdk/: Cargo.toml
crates/nx-sdk/src/: crypto.rs  db.rs  error.rs  ffi.rs  lib.rs  log.rs  net.rs  system.rs  time.rs
crates/nx-sdk/src/crdt/: gcounter.rs  lww_map.rs  lww_register.rs  orset.rs  pncounter.rs  rga.rs
crates/nx-store/: Cargo.toml
crates/nx-store/benches/: single_node_load.rs
crates/nx-store/reports/baselines/: README.md  single-node-10k-1h.json
crates/nx-store/reports/load/: single-node-10k-1h.json
crates/nx-store/src/: basic.rs  error.rs  lib.rs  store.rs
crates/nx-store/tests/: basic.rs
crates/nx-sync/: Cargo.toml
crates/nx-sync/src/: error.rs  lib.rs  node_id.rs  op.rs
crates/nx-sync/src/crdt/: gcounter.rs  lww_map.rs  lww_register.rs  mod.rs  orset.rs  pncounter.rs  rga.rs
docs/: ROADMAP.md  WHITEPAPER.md
docs/compose/: observability.yml  prometheus.yml
docs/compose/grafana/provisioning/dashboards/: numax.yml
docs/dashboards/: numax.json
docs/nx-site/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json
docs/nx-site/public/: CNAME
docs/nx-site/src/: env.d.ts
docs/nx-site/src/components/: Footer.astro  GiscusComments.astro  Header.astro
docs/nx-site/src/content/docs/: blog.md  index.md
docs/nx-site/src/content/docs/blog/: index.md  v0-1-2-performance-profiling.md
docs/nx-site/src/content/docs/community/: index.md
docs/nx-site/src/content/docs/concepts/: crdt-and-state.md  foundations.md  gossip-protocol.md  local-first.md  runtime-model.md  wasm-execution.md
docs/nx-site/src/content/docs/cookbook/: index.md
docs/nx-site/src/content/docs/design/: schema-versioning.md  wire-versioning.md
docs/nx-site/src/content/docs/getting-started/: installation.md  introduction.md  quickstart-5-min.md  your-first-module.md
docs/nx-site/src/content/docs/guides/: build-a-kv-store.md  debugging-wasm-modules.md  deploy-on-edge.md  observability.md  writing-host-functions.md
docs/scripts/: check-observability.sh
examples/distributed_chat/: Cargo.toml  README.md
examples/distributed_chat/src/: lib.rs
examples/distributed_comments/: Cargo.toml  README.md
examples/distributed_comments/src/: lib.rs
examples/distributed_counter/: Cargo.toml  README.md
examples/distributed_counter/src/: lib.rs
examples/distributed_inventory/: Cargo.toml  README.md
examples/distributed_inventory/src/: lib.rs
examples/distributed_settings/: Cargo.toml  README.md
examples/distributed_settings/src/: lib.rs
examples/distributed_status/: Cargo.toml  README.md
examples/distributed_status/src/: lib.rs
examples/distributed_tags/: Cargo.toml  README.md
examples/distributed_tags/src/: lib.rs
examples/guest_c/: README.md  build.bat  build.sh
examples/guest_c/src/: guest.c
examples/guest_cpp/: .gitignore  README.md  build.bat  build.sh
examples/guest_cpp/src/: guest.cpp
examples/hello_sdk/: Cargo.toml  README.md
examples/hello_sdk/src/: lib.rs
examples/hello_wasi/: Cargo.toml  README.md
examples/hello_wasi/src/: lib.rs
examples/hello_wasm/: Cargo.toml  README.md
examples/hello_wasm/src/: lib.rs
examples/kv_counter/: Cargo.toml  README.md
examples/kv_counter/src/: lib.rs
examples/kv_get_set_delete/: Cargo.toml  README.md
examples/kv_get_set_delete/src/: lib.rs
examples/kv_roundtrip/: Cargo.toml  README.md
examples/kv_roundtrip/src/: lib.rs
examples/kv_sdk_roundtrip/: Cargo.toml  README.md
examples/kv_sdk_roundtrip/src/: lib.rs
examples/vote_tally_tls/: Cargo.toml  README.md
examples/vote_tally_tls/src/: lib.rs
scripts/: compare-benchmark-report.mjs  compare-benchmark-report.test.mjs
(+47 files in other folders)
