[package]
name = "nx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
wasmtime = "43.0.1"
wasmtime-wasi = "43.0.1"
nx-store = { path = "../nx-store" }
nx-sync = { path = "../nx-sync" }
nx-net = { path = "../nx-net" }
tokio = { version = "1", features = ["io-util", "net", "signal", "sync", "time"] }
tracing = "0.1"
