[package]
name = "nx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
getrandom = "0.3"
sha2 = "0.11.0"
wasmtime = "43.0.1"
wasmtime-wasi = "43.0.1"
nx-store = { path = "../nx-store" }
nx-sync = { path = "../nx-sync" }
nx-net = { path = "../nx-net" }
tokio = { version = "1", features = ["io-util", "net", "signal", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[[bench]]
name = "three_node_sync_load"
harness = false
