[package]
name = "nx-core"
version = "0.1.1"
edition = "2024"

[features]
cpu-profiling = ["dep:pprof"]
heap-profiling = ["dep:dhat"]

[dependencies]
anyhow = "1"
blake3 = "1"
getrandom = "0.3"
sha2 = "0.11.0"
serde_json = "1"
wasmtime = "43.0.1"
wasmtime-wasi = "43.0.1"
nx-store = { version = "0.1.1", path = "../nx-store" }
nx-sync = { version = "0.1.1", path = "../nx-sync" }
nx-net = { version = "0.1.1", path = "../nx-net" }
tokio = { version = "1", features = ["io-util", "net", "signal", "sync", "time"] }
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
dhat = { version = "0.3.3", optional = true }
pprof = { version = "0.15", optional = true, default-features = false, features = ["flamegraph"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[[bench]]
name = "three_node_sync_load"
harness = false

[[bench]]
name = "chaos_sync_load"
harness = false
