[package]
name = "nx-net"
version = "0.1.0"
edition = "2024"

[dependencies]
nx-sync = { path = "../nx-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"