[package]
name = "nx-net"
version = "0.1.0"
edition = "2024"

[dependencies]
nx-sync = { path = "../nx-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"

tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"