[package]
name = "nx-net"
version = "0.1.0"
edition = "2024"

[dependencies]
nx-sync = { path = "../nx-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
tokio-rustls = "0.26"
tempfile = "3"
tracing = "0.1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
sha2 = "0.11.0"
hex = "0.4"
x509-parser = "0.18.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
tokio-test = "0.4"

[[bench]]
name = "serialization"
harness = false
