[package]
name = "nx-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# Serializzazione: JSON per debug/sviluppo iniziale.
# TODO(phase4-serialization): valutare migrazione a bincode o MessagePack
#   per produzione (più compatto/veloce). Con serde il cambio è banale:
#   - bincode::serialize(&op) invece di serde_json::to_vec(&op)
#   - MessagePack via `rmp-serde` crate
#   JSON resta utile per debug e ispezione traffico di rete, quindi lo manteniamo come opzione.
serde_json = "1"

# Per generare node_id univoci
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]